--- a/index.html
+++ b/index.html
@@ -530,8 +530,11 @@
     -->
 
     
-
+    <!-- ==== Footer ==== -->
     <div class="container">
+      <div class="footer-info" style="text-align: center;">
+        <h3>Pivot Software<span>.</span></h3>
+      </div>
       <div class="copyright">
         &copy; Copyright <strong><span>PivotSoftware LLC</span></strong>. All Rights Reserved
       </div>
