--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <!--<a href="#about" class="get-started-btn scrollto">Get Started</a>-->
 
     </div>
   </header><!-- End Header -->
@@ -191,7 +191,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bx bx-street-view"></i></div>
               <h4><a href="">Development Team Extension</a></h4>
               <p>Building dedicated distributed teams of top-notch professionals focusing on the back-end, front-end,
                 embedded, mobile development, and design.</p>
@@ -201,7 +201,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
             data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-desktop"></i></div>
               <h4><a href="">Web Frontend Development</a></h4>
               <p>Our frontend development expertise enables our clients to differentiate themselves with software
                 products that are a delight to use.</p>
@@ -211,7 +211,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
             data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-server"></i></div>
               <h4><a href="">Backend Development</a></h4>
               <p>Pivot specializes in complex backend development, using sprint methodology and standards-based code to
                 get applications to market quickly.</p>
@@ -220,8 +220,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Movile Development</a></h4>
+              <div class="icon"><i class="bx bxs-devices"></i></div>
+              <h4><a href="">Mobile Development</a></h4>
               <p>Our expertise in custom mobile app development gives our clients the opportunity to pack incredible
                 functionality into their customer’s palms.</p>
             </div>
@@ -229,7 +229,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class="bx bx-trim"></i></div>
               <h4><a href="">Product Design</a></h4>
               <p>Our in-house designers have a breadth of experience in responsive design, we create functional products
                 that look great on web, mobile and tablet devices.</p>
@@ -238,7 +238,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class="bx bx-palette"></i></div>
               <h4><a href="">UX Design</a></h4>
               <p>Our in-house designers have a breadth of experience in responsive design, we create functional products
                 that look great on web, mobile and tablet devices.</p>
@@ -281,7 +281,7 @@
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-emoji-smile"></i>
+                    <i class="bi bi-list-check"></i>
                     <p> Full Cycle Development
 
                       We are a <strong>full-service</strong> digital marketing agency, so we can develop platforms and
@@ -292,7 +292,7 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-journal-richtext"></i>
+                    <i class="bi bi-stack-overflow"></i>
                     <p>We migrate your old portals and websites to leading platforms such as Adobe Experience Cloud or
                       WordPress to ensure that your content team can easily implement your marketing strategy.</p>
                   </div>
@@ -300,7 +300,7 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-clock"></i>
+                    <i class="bi bi-stack"></i>
                     <p>We assess your existing marketing technology solutions and guide you toward a more effective or
                       modern approach, without having to start from scratch.</p>
                   </div>
@@ -308,7 +308,7 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-award"></i>
+                    <i class="bi bi-terminal-split"></i>
                     <p>We offer on-going support, including QA automation and DevOps, to ensure that our clients’
                       solutions perform optimally and meet their digital marketing goals. We also provide a number of
                       web publishing services to bridge the gap between your content creators and customers.</p>
